Updated paverment.py to fix an issue which prevented sample-data from being included in distribution archive

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
-include doc/sample-data
-recursive-include docs *
+recursive-include doc/sample-data *
+recursive-include doc/html *
 recursive-include sunpy *.py
 include *.txt
 include setup.py
