Updated paver sdist task to include paver-minilib; this way SunPy can be installed with just setuputils and will not require paver itself as well.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,5 @@ recursive-include doc/html *
 recursive-include sunpy *.py
 include *.txt
 include setup.py
+include paver-minilib.zip
 include pavement.py
