updated pavement.py to avoid clobbering setup.py. added README.md to MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,6 @@ recursive-include doc/sample-data *
 recursive-include doc/html *
 recursive-include sunpy *.py
 include *.txt
+include *.md
 include setup.py
-include paver-minilib.zip
 include pavement.py
