--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,5 @@ deps=
 commands=
  pip install numpy
  pip install scipy
- pip install -f http://downloads.sourceforge.net/project/matplotlib/matplotlib/matplotlib-1.0/matplotlib-1.0.0.tar.gz matplotlib
+ pip install matplotlib
  py.test --pyargs sunpy.tests
