--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
-recursive-include doc/sample-data *
 recursive-include doc/html *
 recursive-include sunpy *.py
+recursive-include sunpy/data/sample *
 include *.txt
 include *.md
 include setup.py
