--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,11 @@
 envlist = py26,py27
 [testenv]
 deps=
- pyfits
  pytest
  suds
 commands=
  pip install numpy
  pip install scipy
  pip install matplotlib
+ pip install pyfits
  py.test --pyargs sunpy.tests
