Switched from distutils to setuptools/distribute for installation and distribution: better python 3 and dependency support.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ recursive-include sunpy/data/sample *
 include *.txt
 include *.md
 include setup.py
+include distribute_setup.py
 include pavement.py
