--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,11 @@ envlist = py26,py27
 deps=
  pytest
  suds
+ numpy
 commands=
- pip install numpy
  pip install scipy
  pip install matplotlib
  pip install pyfits
+ pip install pandas
+ pip install --no-index -f http://dist.plone.org/thirdparty/ -U PIL
  py.test --pyargs sunpy.tests
