--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ commands=
  pip install pyfits
  pip install pandas
  pip install --no-index -f http://dist.plone.org/thirdparty/ -U PIL
- py.test --pyargs sunpy.tests
+ py.test --junitxml=result.xml --pyargs sunpy.tests
