--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 recursive-include doc/html *
 recursive-include sunpy *.py
 recursive-include sunpy/data/sample *
+recursive-include sunpy/data/test *
+include sunpy/data/sunpyrc
 include *.txt
 include *.md
 include setup.py
