--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "2.6"
   - "2.7"
 # command to install dependencies
-install: apt-get install python2.6-scipy python2.6-numpy python2.6-matplotlib; pip install -r requirements.txt --use-mirrors
+install: sudo apt-get install python2.6-scipy python2.6-numpy python2.6-matplotlib; pip install -r requirements.txt --use-mirrors
 # command to run tests
 script: py.test sunpy/tests/ 
