--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 beautifulsoup4==4.1.1
 configobj==4.7.2
 distribute==0.6.24
-numpy==1.6.2
+numpy
 py==1.4.9
 pytest==2.2.4
-scipy==0.10.1
+scipy
 suds==0.4
 sunpy==0.1
 wsgiref==0.1.2
