--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "2.6"
   - "2.7"
 # command to install dependencies
-install: sudo apt-get build-dep python-scipy python-numpy; pip install tox;
+install: sudo apt-get build-dep python-scipy python-numpy; pip install scipy; pip install matplotlib; pip install pyfits; pip install pandas==0.8.0; pip install --no-index -f http://dist.plone.org/thirdparty/ -U PIL; pip install pytest suds
+ numpy  beautifulsoup4;
+
 # command to run tests
 script: tox
