--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ python:
 install: sudo apt-get build-dep python-scipy python-numpy; pip install pytest suds numpy beautifulsoup4; pip install scipy; pip install matplotlib; pip install pyfits; pip install pandas==0.8.0; pip install --no-index -f http://dist.plone.org/thirdparty/ -U PIL; 
 
 # command to run tests
-script: py.test sunpy.tests
+script: py.test sunpy/tests/
