Force zero warnings in test suite

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,7 +93,7 @@ remote_data_strict = True
 # Pin junit behaviour; we might want to update this to xunit2 at some point
 junit_family=xunit1
 filterwarnings =
-    ignore
+    error
     error::sunpy.util.exceptions.SunpyDeprecationWarning
     #
     # A list of warnings to ignore follows. If you add to this list, you MUST
