Ignore parfive deprecation warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -97,6 +97,8 @@ filterwarnings =
     ignore:direct construction of AsdfSchemaFile has been deprecated
     ignore:direct construction of AsdfSchemaItem has been deprecated
     ignore:direct construction of AsdfSchemaExampleItem has been deprecated
+    # See https://github.com/Cadair/parfive/issues/41
+    ignore:The loop argument is deprecated
 
 [pycodestyle]
 max_line_length = 100
