Adds SciKit Learn as a dependency.

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
   pandas>=0.23.0
   astropy>=3.2
   parfive[ftp]>=1.1.0
+  scikit-learn>=0.23.1
 
 [options.extras_require]
 database = sqlalchemy
