Moves SKL to an extra dependency and adds import tests.

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ license = BSD 2-Clause
 license_file = LICENSE.rst
 url = https://sunpy.org
 edit_on_github = True
-github_project = sunpy/sunpy
+github_project = sunpy/sunpy  
 platform = any
 keywords = solar physics, solar, science, sun, wcs, coordinates
 classifiers =
@@ -40,9 +40,10 @@ install_requires =
   pandas>=0.23.0
   astropy>=3.2
   parfive[ftp]>=1.1.0
-  scikit-learn>=0.23.1
 
 [options.extras_require]
+tablematching=
+  scikit-learn>=0.23.1
 database = sqlalchemy
 image =
   scikit-image
