Fix figure tests astropydev installation in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ deps =
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     devdeps: cython
-    devdeps,figure_astropydev: git+https://github.com/astropy/astropy
+    devdeps,figure_py37_astropydev: git+https://github.com/astropy/astropy
     # Oldest deps we pin against.
     oldestdeps: astropy<4.0
     oldestdeps: numpy<1.15.0
