Ensure that SunpyDeprecationWarnings are raised as errors in the test suite

--- a/setup.cfg
+++ b/setup.cfg
@@ -79,10 +79,10 @@ asdf_extensions =
 [tool:pytest]
 minversion = 3.0
 testpaths = "sunpy" "docs"
-norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]cm" ".jupyter" "joss_paper" ".history"
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]cm" ".jupyter" ".history" "tools"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = -p no:warnings --doctest-rst -m "not figure" --doctest-ignore-import-errors
+addopts = --doctest-rst -m "not figure" --doctest-ignore-import-errors
 asdf_schema_tests_enabled = true
 asdf_schema_root = sunpy/io/special/asdf/schemas/
 markers =
@@ -91,6 +91,9 @@ markers =
     flaky
     array_compare
 remote_data_strict = True
+filterwarnings =
+    ignore
+    error::sunpy.util.exceptions.SunpyDeprecationWarning
 
 [pycodestyle]
 max_line_length = 100
