--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,10 @@ remote_data_strict = True
 filterwarnings =
     ignore
     error::sunpy.util.exceptions.SunpyDeprecationWarning
+    # See https://github.com/spacetelescope/asdf/issues/789
+    ignore:direct construction of AsdfSchemaFile has been deprecated
+    ignore:direct construction of AsdfSchemaItem has been deprecated
+    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
 
 [pycodestyle]
 max_line_length = 100
