--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,7 @@
 [tox]
 envlist =
-    py{36,37,38}{,-oldestdeps,-devdeps,-online,-hypothesis}
+    py{36,37,38}{,-oldestdeps,-devdeps,-online,-hypothesis,-figure}
     build_docs
-    figure_py36
-    figure_py37_astropydev
-    py36-conda
     codestyle
     hypothesis
 isolated_build = true
@@ -51,6 +48,8 @@ deps =
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     devdeps: git+https://github.com/astropy/astropy
+    devdeps: git+https://github.com/matplotlib/matplotlib
+
     # Oldest deps we pin against.
     oldestdeps: astropy<4.0
     oldestdeps: numpy<1.15.0
@@ -65,15 +64,21 @@ deps =
     # to https://github.com/scikit-image/scikit-image/issues/4261
     32bit: numpy
 
+    # Figure tests need a tightly controlled environment
+    figure-!devdeps: astropy==4.0.1.post1
+    figure-!devdeps: matplotlib==3.2.1
+
 # The following indicates which extras_require from setup.cfg will be installed
 # dev is special in that it installs everything
 extras =
     dev
 commands =
-    !online-!hypothesis: {env:PYTEST_COMMAND} {posargs}
+    !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any -m "remote_data" {posargs}
-    devdeps: bash -ec "for f in {toxinidir}/examples/*/*.py; do [[ $f == *skip* ]] && continue; echo "$f" && python "$f"; done"
+    devdeps-!figure: bash -ec "for f in {toxinidir}/examples/*/*.py; do [[ $f == *skip* ]] && continue; echo "$f" && python "$f"; done"
     hypothesis: {env:PYTEST_COMMAND} --hypothesis-show-statistics --remote-data=any -m "hypothesis" {posargs}
+    figure: /bin/bash -c "python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)'"
+    figure: {env:PYTEST_COMMAND} -m "figure" {posargs}
 
 [testenv:build_docs]
 changedir = docs
@@ -92,43 +97,6 @@ deps =
 commands =
     pre-commit install-hooks
     pre-commit run --verbose --all-files --show-diff-on-failure
-
-# This env requires tox-conda.
-[testenv:figure_py36]
-pypi_filter =
-basepython = python3.6
-description = Run all figure tests with pinned versions
-extras = dev
-conda_deps =
-    python = 3.6.8
-    astropy = 3.2.3
-    numpy = 1.16.2
-    freetype = 2.10
-    matplotlib = 3.1.1
-    scipy = 1.2.1
-    pandas = 0.24.2
-    pillow < 7.1.0
-conda_channels = conda-forge
-commands = {env:PYTEST_COMMAND} -m "figure" {posargs}
-
-# This env requires tox-conda.
-[testenv:figure_py37_astropydev]
-pypi_filter =
-basepython = python3.7
-description = Run all figure tests with master astropy
-extras = dev
-deps =
-    git+https://github.com/astropy/astropy
-conda_deps =
-    python = 3.7.4
-    numpy = 1.17.2
-    freetype = 2.10
-    matplotlib = 3.1.1
-    scipy = 1.3.1
-    pandas = 0.25.1
-    pillow < 7.1.0
-conda_channels = conda-forge
-commands = {env:PYTEST_COMMAND} -m "figure" {posargs}
 
 # This env requires tox-conda.
 [testenv:py36-conda]
