--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,8 @@ install_requires =
   matplotlib>=2.2.2
   pandas>=0.23.0
   astropy>=3.2
-  parfive[ftp]>=1.1.0
+  parfive[ftp]>=1.1.0;python_version>="3.7"
+  parfive[ftp]>=1.0.2<1.1.0;python_version<="3.6"
 
 [options.extras_require]
 database = sqlalchemy
