More version debug for figure tests

--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,7 @@ commands =
     devdeps-!figure: bash -ec "for f in {toxinidir}/examples/*/*.py; do [[ $f == *skip* ]] && continue; echo "$f" && python "$f"; done"
     hypothesis: {env:PYTEST_COMMAND} --hypothesis-show-statistics --remote-data=any -m "hypothesis" {posargs}
     figure: /bin/bash -c "python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)'"
+    figure: pip freeze
     figure: {env:PYTEST_COMMAND} -m "figure" {posargs}
 
 [testenv:build_docs]
