--- a/tox.ini
+++ b/tox.ini
@@ -51,9 +51,10 @@ deps =
     devdeps: git+https://github.com/matplotlib/matplotlib
 
     # Oldest deps we pin against.
-    oldestdeps: astropy<4.0
-    oldestdeps: numpy<1.15.0
+    oldestdeps: astropy<4.1
+    oldestdeps: numpy<1.17.0
     oldestdeps: matplotlib<3.0
+    oldestdeps: scipy<1.3
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
