--- a/tox.ini
+++ b/tox.ini
@@ -78,8 +78,9 @@ commands =
     online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any -m "remote_data" {posargs}
     devdeps-!figure: bash -ec "for f in {toxinidir}/examples/*/*.py; do [[ $f == *skip* ]] && continue; echo "$f" && python "$f"; done"
     hypothesis: {env:PYTEST_COMMAND} --hypothesis-show-statistics --remote-data=any -m "hypothesis" {posargs}
-    figure: /bin/bash -c "python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)'"
-    figure: pip freeze
+    figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
+    figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
+    figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: {env:PYTEST_COMMAND} -m "figure" {posargs}
 
 [testenv:build_docs]
