--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,7 +73,7 @@ jobs:
 
       - linux: py38-hypothesis
 
-      - linux: py38-conda
+      - macos: py38-conda
         name: py38_conda
         libraries: {}
 
