--- a/tox.ini
+++ b/tox.ini
@@ -139,6 +139,7 @@ deps =
 conda_deps =
     astropy
     beautifulsoup4
+    conda
     dask
     drms
     glymur
@@ -161,4 +162,7 @@ conda_deps =
     zeep
     pillow < 7.1.0
 conda_channels = sunpy
-commands = {env:PYTEST_COMMAND} {posargs}
+install_command = pip install --no-deps {opts} {packages}
+commands =
+    conda list
+    {env:PYTEST_COMMAND} {posargs}
