--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{36,37,38}{,-oldestdeps,-devdeps,-online,-hypothesis,-figure}
+    py{37,38}{,-oldestdeps,-devdeps,-online,-hypothesis,-figure}
     build_docs
     codestyle
     hypothesis
@@ -51,9 +51,10 @@ deps =
     devdeps: git+https://github.com/matplotlib/matplotlib
 
     # Oldest deps we pin against.
-    oldestdeps: astropy<4.0
-    oldestdeps: numpy<1.15.0
+    oldestdeps: astropy<4.1
+    oldestdeps: numpy<1.17.0
     oldestdeps: matplotlib<3.0
+    oldestdeps: scipy<1.3
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
@@ -77,8 +78,9 @@ commands =
     online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any -m "remote_data" {posargs}
     devdeps-!figure: bash -ec "for f in {toxinidir}/examples/*/*.py; do [[ $f == *skip* ]] && continue; echo "$f" && python "$f"; done"
     hypothesis: {env:PYTEST_COMMAND} --hypothesis-show-statistics --remote-data=any -m "hypothesis" {posargs}
-    figure: /bin/bash -c "python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)'"
-    figure: pip freeze
+    figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
+    figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
+    figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: {env:PYTEST_COMMAND} -m "figure" {posargs}
 
 [testenv:build_docs]
@@ -100,9 +102,9 @@ commands =
     pre-commit run --verbose --all-files --show-diff-on-failure
 
 # This env requires tox-conda.
-[testenv:py36-conda]
+[testenv:py38-conda]
 pypi_filter =
-basepython = python3.6
+basepython = python3.8
 extras =
 deps =
 conda_deps =
