--- a/tox.ini
+++ b/tox.ini
@@ -102,7 +102,7 @@ commands =
     pre-commit run --verbose --all-files --show-diff-on-failure
 
 # This env requires tox-conda.
-[testenv:py38-conda]
+[testenv:py38-cf-conda]
 pypi_filter =
 basepython = python3.8
 extras =
@@ -137,6 +137,48 @@ conda_deps =
     zeep
     pillow < 7.1.0
 conda_channels = conda-forge
+install_command = pip install --no-deps {opts} {packages}
+commands =
+    conda list
+    {env:PYTEST_COMMAND} {posargs}
+
+# This env requires tox-conda.
+[testenv:py38-sp-conda]
+pypi_filter =
+basepython = python3.8
+extras =
+deps =
+conda_deps =
+    # asdf  # breaks the conda solution
+    astropy
+    beautifulsoup4
+    conda
+    dask
+    drms
+    # extension-helpers  # does not exist
+    glymur
+    hypothesis
+    jinja2
+    llvm-openmp  # not being found as a dependency in solution
+    lxml
+    matplotlib
+    numpy  # not getting pulled from sunpy channel in solution
+    openjpeg
+    pandas
+    parfive
+    pytest
+    pytest-astropy
+    pytest-cov
+    pytest-mock
+    pytest-xdist
+    scikit-image
+    scipy  # not getting pulled from sunpy channel in solution
+    sphinx
+    sqlalchemy
+    towncrier
+    zeep
+    pillow < 7.1.0  # not getting pulled from sunpy channel in solution
+conda_channels = sunpy
 install_command = pip install --no-deps {opts} {packages}
 commands =
     conda list
