change to conda-forge for conda tox env

--- a/tox.ini
+++ b/tox.ini
@@ -133,7 +133,7 @@ conda_deps =
     sqlalchemy
     zeep
     pillow < 7.1.0
-conda_channels = sunpy
+conda_channels = conda-forge
 install_command = pip install --no-deps {opts} {packages}
 commands =
     conda list
