Switch to using conda-forge for tox conda build

--- a/tox.ini
+++ b/tox.ini
@@ -108,11 +108,13 @@ basepython = python3.8
 extras =
 deps =
 conda_deps =
+    asdf
     astropy
     beautifulsoup4
     conda
     dask
     drms
+    extension-helpers
     glymur
     hypothesis
     jinja2
@@ -129,10 +131,12 @@ conda_deps =
     pytest-xdist
     scikit-image
     scipy
+    sphinx
     sqlalchemy
+    towncrier
     zeep
     pillow < 7.1.0
-conda_channels = sunpy
+conda_channels = conda-forge
 install_command = pip install --no-deps {opts} {packages}
 commands =
     conda list
