Trying a pin on scikit-image

--- a/tox.ini
+++ b/tox.ini
@@ -129,7 +129,7 @@ conda_deps =
     pytest-cov
     pytest-mock
     pytest-xdist
-    scikit-image
+    scikit-image=0.16.2
     scipy
     sphinx
     sqlalchemy
