--- a/tox.ini
+++ b/tox.ini
@@ -143,6 +143,90 @@ commands =
     {env:PYTEST_COMMAND} {posargs}
 
 # This env requires tox-conda.
+[testenv:py38-cf-mkl-conda]
+pypi_filter =
+basepython = python3.8
+extras =
+deps =
+conda_deps =
+    asdf
+    astropy
+    beautifulsoup4
+    blas=*=mkl
+    conda
+    dask
+    drms
+    extension-helpers
+    glymur
+    hypothesis
+    jinja2
+    lxml
+    matplotlib
+    numpy
+    openjpeg
+    pandas
+    parfive
+    pytest
+    pytest-astropy
+    pytest-cov
+    pytest-mock
+    pytest-xdist
+    scikit-image
+    scipy
+    sphinx
+    sqlalchemy
+    towncrier
+    zeep
+    pillow < 7.1.0
+conda_channels = conda-forge
+install_command = pip install --no-deps {opts} {packages}
+commands =
+    conda list
+    {env:PYTEST_COMMAND} {posargs}
+
+# This env requires tox-conda.
+[testenv:py38-cf-numpy-conda]
+pypi_filter =
+basepython = python3.8
+extras =
+deps =
+conda_deps =
+    asdf
+    astropy
+    beautifulsoup4
+    blas
+    conda
+    dask
+    drms
+    extension-helpers
+    glymur
+    hypothesis
+    jinja2
+    lxml
+    matplotlib
+    defaults::numpy
+    openjpeg
+    pandas
+    parfive
+    pytest
+    pytest-astropy
+    pytest-cov
+    pytest-mock
+    pytest-xdist
+    scikit-image
+    scipy
+    sphinx
+    sqlalchemy
+    towncrier
+    zeep
+    pillow < 7.1.0
+conda_channels = conda-forge
+install_command = pip install --no-deps {opts} {packages}
+commands =
+    conda list
+    {env:PYTEST_COMMAND} {posargs}
+
+# This env requires tox-conda.
 [testenv:py38-sp-conda]
 pypi_filter =
 basepython = python3.8
