--- a/tox.ini
+++ b/tox.ini
@@ -185,7 +185,7 @@ commands =
     {env:PYTEST_COMMAND} {posargs}
 
 # This env requires tox-conda.
-[testenv:py38-cf-numpy-conda]
+[testenv:py38-cf-defaults-conda]
 pypi_filter =
 basepython = python3.8
 extras =
