--- a/tox.ini
+++ b/tox.ini
@@ -129,7 +129,7 @@ conda_deps =
     pytest-cov
     pytest-mock
     pytest-xdist
-    scikit-image=0.16.2
+    scikit-image
     scipy
     sphinx
     sqlalchemy
@@ -194,7 +194,7 @@ conda_deps =
     asdf
     astropy
     beautifulsoup4
-    defaults::blas=*=mkl
+    defaults::blas=*=openblas
     conda
     dask
     drms
