Various updates, including trying out a single-thread OpenBLAS

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,6 +82,10 @@ jobs:
         libraries: {}
         posargs: -n=1
 
+      - macos: py38-cf-single-conda
+        name: py38_cf_single_conda
+        libraries: {}
+
       - macos: py38-cf-mkl-conda
         name: py38_cf_mkl_conda
         libraries: {}
