--- a/tox.ini
+++ b/tox.ini
@@ -143,6 +143,48 @@ commands =
     {env:PYTEST_COMMAND} {posargs}
 
 # This env requires tox-conda.
+[testenv:py38-cf-single-conda]
+pypi_filter =
+basepython = python3.8
+extras =
+deps =
+conda_deps =
+    asdf
+    astropy
+    beautifulsoup4
+    conda
+    dask
+    drms
+    extension-helpers
+    glymur
+    hypothesis
+    jinja2
+    lxml
+    matplotlib
+    numpy
+    openjpeg
+    pandas
+    parfive
+    pytest
+    pytest-astropy
+    pytest-cov
+    pytest-mock
+    pytest-xdist
+    scikit-image
+    scipy
+    sphinx
+    sqlalchemy
+    towncrier
+    zeep
+    pillow < 7.1.0
+conda_channels = conda-forge
+install_command = pip install --no-deps {opts} {packages}
+passenv = OPENBLAS_NUM_THREADS=1
+commands =
+    conda list
+    {env:PYTEST_COMMAND} {posargs}
+
+# This env requires tox-conda.
 [testenv:py38-cf-mkl-conda]
 pypi_filter =
 basepython = python3.8
@@ -194,7 +236,7 @@ conda_deps =
     asdf
     astropy
     beautifulsoup4
-    defaults::blas=*=openblas
+    defaults::blas=*=mkl
     conda
     dask
     drms
