--- a/tox.ini
+++ b/tox.ini
@@ -179,7 +179,7 @@ conda_deps =
     pillow < 7.1.0
 conda_channels = conda-forge
 install_command = pip install --no-deps {opts} {packages}
-passenv = OPENBLAS_NUM_THREADS=1
+passenv = OMP_NUM_THREADS=1
 commands =
     conda list
     {env:PYTEST_COMMAND} {posargs}
