--- a/tox.ini
+++ b/tox.ini
@@ -181,6 +181,7 @@ conda_channels = conda-forge
 install_command = pip install --no-deps {opts} {packages}
 setenv =
     OMP_NUM_THREADS=1
+    {[testenv]setenv}
 commands =
     conda list
     {env:PYTEST_COMMAND} {posargs}
