--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,9 +78,19 @@ jobs:
         libraries: {}
 
       - macos: py38-cf-conda
+        name: py38_cf_n1_conda
+        libraries: {}
+        posargs: -n=1
+
+      - macos: py38-cf-conda
         name: py38_cf_n0_conda
         libraries: {}
         posargs: -n=0
+
+      - macos: py38-cf-copy-conda
+        name: py38_cf_copy_conda
+        libraries: {}
+        posargs: -n=1
 
       - macos: py38-cf-single-conda
         name: py38_cf_single_conda
@@ -94,11 +104,6 @@ jobs:
       - macos: py38-cf-mkl-conda
         name: py38_cf_mkl_conda
         libraries: {}
-
-      - macos: py38-cf-mkl-conda
-        name: py38_cf_mkl_n0_conda
-        libraries: {}
-        posargs: -n=0
 
       - macos: py38-cf-defaults-conda
         name: py38_cf_defaults_conda
