Transition doc build to RTD

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,6 +4,11 @@ version: 2
 conda:
   environment: rtd-environment.yml
 
+sphinx:
+  builder: html
+  configuration: docs/conf.py
+  fail_on_warning: true
+
 python:
    version: 3.8
    install:
