--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ trigger:
     - '*post*'
 
 jobs:
-- template: run-tox-env.yml@OpenAstronomy
+- template: run-tox-env.yml
   parameters:
     submodules: false
     coverage: codecov
@@ -88,6 +88,25 @@ jobs:
         posargs: -n=0
 
       - macos: py38-cf-copy-conda
+        name: py38_cf_copy_conda
+        libraries: {}
+        posargs: -n=1
+
+      - macos14: py38-cf-conda
+        name: py38_cf_conda
+        libraries: {}
+
+      - macos14: py38-cf-conda
+        name: py38_cf_n1_conda
+        libraries: {}
+        posargs: -n=1
+
+      - macos14: py38-cf-conda
+        name: py38_cf_n0_conda
+        libraries: {}
+        posargs: -n=0
+
+      - macos14: py38-cf-copy-conda
         name: py38_cf_copy_conda
         libraries: {}
         posargs: -n=1
