--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
   pandas>=0.23.0
   astropy>=4.0
   parfive[ftp]>=1.1.0
+  importlib_metadata;python_version<"3.8"
 
 [options.extras_require]
 database = sqlalchemy
