importlib_metadata;python_version<3.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ install_requires =
   astropy>=3.2
   parfive[ftp]>=1.1.0;python_version>="3.7"
   parfive[ftp]>=1.0.2<1.1.0;python_version<="3.6"
+  importlib_metadata;python_version<"3.8"
 
 [options.extras_require]
 database = sqlalchemy
