--- a/rtd-environment.yml
+++ b/rtd-environment.yml
@@ -1,37 +1,7 @@
 name: sunpy
 channels:
-  - sunpy
-  - defaults
+  - conda-forge
 dependencies:
-  - graphviz!=2.42.*
   - openjpeg
   - pip
   - python
-  - sphinx
-  - pip:
-    - asdf
-    - astropy
-    - astroquery
-    - beautifulsoup4
-    - drms
-    - extension_helpers
-    - glymur
-    - hypothesis
-    - jplephem
-    - matplotlib
-    - numpy
-    - pandas
-    - parfive
-    - pytest
-    - python-dateutil
-    - reproject
-    - ruamel.yaml
-    - scikit-image
-    - scipy
-    - sphinx-astropy
-    - sphinx-gallery
-    - sqlalchemy
-    - sunpy-sphinx-theme
-    - towncrier
-    - tqdm
-    - zeep
