updated figure hashes

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ description =
     oldestdeps: with the oldest supported version of key dependencies
     online: that require remote data
     hypothesis: using hypothesis (both offline and online)
+    figure: runs the figure test suite.
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
