--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,7 @@ tests =
 docs =
   sphinx>=2
   sphinx-automodapi
-  sphinx-gallery
+  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
   sunpy-sphinx-theme
   ruamel.yaml
   towncrier
