updated doc dev guide

--- a/tox.ini
+++ b/tox.ini
@@ -21,12 +21,12 @@ changedir = .tmp/{envname}
 # see a list of example environments that can be run, along with a description,
 # run:
 #
-#     tox -l -v
+#     tox -v -l
 #
 description =
-    run tests
-    devdeps: with the latest developer version of key dependencies
+    runs the test suite
     oldestdeps: with the oldest supported version of key dependencies
+    devdeps: with the latest developer version of key dependencies
     online: that require remote data
     hypothesis: using hypothesis (both offline and online)
     figure: runs the figure test suite.
