Globally ignore various deprecation warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,12 +93,32 @@ remote_data_strict = True
 filterwarnings =
     ignore
     error::sunpy.util.exceptions.SunpyDeprecationWarning
+    #
+    # A list of warnings to ignore follows. If you add to this list, you MUST
+    # add a comment or ideally a link to an issue that explains why the warning
+    # is being ignored
+    #
     # See https://github.com/spacetelescope/asdf/issues/789
     ignore:direct construction of AsdfSchemaFile has been deprecated
     ignore:direct construction of AsdfSchemaItem has been deprecated
     ignore:direct construction of AsdfSchemaExampleItem has been deprecated
     # See https://github.com/Cadair/parfive/issues/41
     ignore:The loop argument is deprecated
+    # These warnings are raised on travis due to something odd about numpy installation,
+    # but don't impact the tests
+    ignore:numpy.ufunc size changed:RuntimeWarning
+    # See https://github.com/mvantellingen/python-zeep/issues/956
+    ignore:defusedxml.lxml is no longer supported:DeprecationWarning
+    # See https://github.com/aio-libs/aiohttp/issues/4842
+    ignore:"@coroutine" decorator is deprecated
+    # See https://github.com/spacetelescope/asdf/issues/789
+    ignore:direct construction of AsdfSchemaFile has been deprecated
+    ignore:direct construction of AsdfSchemaItem has been deprecated
+    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
+    # See https://github.com/scikit-image/scikit-image/issues/4848
+    ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
+    # See https://github.com/sunpy/sunpy/pull/4343
+    ignore:The private astropy._erfa module has been made into its own package
 
 [pycodestyle]
 max_line_length = 100
