--- a/setup.cfg
+++ b/setup.cfg
@@ -119,6 +119,8 @@ filterwarnings =
     ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
     # See https://github.com/sunpy/sunpy/pull/4343
     ignore:The private astropy._erfa module has been made into its own package
+    # See https://github.com/astropy/astropy/pull/10570
+    ignore:leap-second auto-update failed
 
 [pycodestyle]
 max_line_length = 100
