Pin junit behaviour

--- a/setup.cfg
+++ b/setup.cfg
@@ -90,6 +90,8 @@ markers =
     flaky
     array_compare
 remote_data_strict = True
+# Pin junit behaviour; we might want to update this to xunit2 at some point
+junit_family=xunit1
 filterwarnings =
     ignore
     error::sunpy.util.exceptions.SunpyDeprecationWarning
@@ -121,6 +123,7 @@ filterwarnings =
     ignore:The private astropy._erfa module has been made into its own package
     # See https://github.com/astropy/astropy/pull/10570
     ignore:leap-second auto-update failed
+
 
 [pycodestyle]
 max_line_length = 100
