--- a/setup.cfg
+++ b/setup.cfg
@@ -100,6 +100,10 @@ filterwarnings =
     # add a comment or ideally a link to an issue that explains why the warning
     # is being ignored
     #
+    # Several timeseries data products have nanoseconds, that python/pandas
+    # can't handle; ignore these warnings, as they do not directly affect sunpy
+    ignore:Discarding nonzero nanoseconds in conversion
+    #
     # See https://github.com/spacetelescope/asdf/issues/789
     ignore:direct construction of AsdfSchemaFile has been deprecated
     ignore:direct construction of AsdfSchemaItem has been deprecated
