--- a/setup.cfg
+++ b/setup.cfg
@@ -90,6 +90,8 @@ markers =
     flaky
     array_compare
 remote_data_strict = True
+# Pin junit behaviour; we might want to update this to xunit2 at some point
+junit_family=xunit1
 filterwarnings =
     ignore
     error::sunpy.util.exceptions.SunpyDeprecationWarning
@@ -97,6 +99,10 @@ filterwarnings =
     # A list of warnings to ignore follows. If you add to this list, you MUST
     # add a comment or ideally a link to an issue that explains why the warning
     # is being ignored
+    #
+    # Several timeseries data products have nanoseconds, that python/pandas
+    # can't handle; ignore these warnings, as they do not directly affect sunpy
+    ignore:Discarding nonzero nanoseconds in conversion
     #
     # See https://github.com/spacetelescope/asdf/issues/789
     ignore:direct construction of AsdfSchemaFile has been deprecated
@@ -119,6 +125,9 @@ filterwarnings =
     ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
     # See https://github.com/sunpy/sunpy/pull/4343
     ignore:The private astropy._erfa module has been made into its own package
+    # See https://github.com/astropy/astropy/pull/10570
+    ignore:leap-second auto-update failed
+
 
 [pycodestyle]
 max_line_length = 100
