Pin OpenBLAS to 0.3.9

--- a/tox.ini
+++ b/tox.ini
@@ -119,10 +119,10 @@ conda_deps =
     glymur
     hypothesis
     jinja2
+    libopenblas=0.3.9
     lxml
     matplotlib
     numpy
-    libopenblas=*=*openmp*
     openjpeg
     pandas
     parfive
