--- a/tox.ini
+++ b/tox.ini
@@ -119,7 +119,7 @@ conda_deps =
     glymur
     hypothesis
     jinja2
-    libopenblas=0.3.9
+    libopenblas=0.3.10=h5*
     lxml
     matplotlib
     numpy
