Pin OpenBLAS to before 0.3.10 due to apparent bugs on Linux

--- a/tox.ini
+++ b/tox.ini
@@ -119,6 +119,7 @@ conda_deps =
     glymur
     hypothesis
     jinja2
+    libopenblas<0.3.10
     lxml
     matplotlib
     numpy
@@ -136,7 +137,7 @@ conda_deps =
     sqlalchemy
     towncrier
     zeep
-    pillow < 7.1.0
+    pillow
 conda_channels = conda-forge
 install_command = pip install --no-deps {opts} {packages}
 commands =
