--- a/setup.cfg
+++ b/setup.cfg
@@ -152,11 +152,10 @@ include_trailing_comma = True
 known_astropy = astropy, asdf
 known_first_party = sunpy
 length_sort = False
-length_sort_stdlib = True
+length_sort_sections=stdlib
 line_length = 110
 multi_line_output = 3
 no_lines_before = LOCALFOLDER
-not_skip = __init__.py
 sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
 
 [coverage:run]
