--- a/tox.ini
+++ b/tox.ini
@@ -120,7 +120,7 @@ conda_deps =
     glymur
     hypothesis
     jinja2
-    libopenblas<0.3.10
+    libopenblas=0.3.10
     lxml
     matplotlib
     numpy
@@ -144,3 +144,19 @@ install_command = pip install --no-deps {opts} {packages}
 commands =
     conda list
     {env:PYTEST_COMMAND} {posargs}
+
+# This env requires tox-conda.
+[testenv:py38-singlethread-conda]
+pypi_filter =
+basepython = python3.8
+extras =
+deps =
+conda_deps =
+    {[testenv:py38-conda]conda_deps}
+conda_channels = {[testenv:py38-conda]conda_channels}
+install_command = {[testenv:py38-conda]install_command}
+setenv =
+    OMP_NUM_THREADS=1
+    {[testenv]setenv}
+commands =
+    {[testenv:py38-conda]commands}
