--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,6 +1,9 @@
+# readthedocs.yml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
 version: 2
 
-# We have to use conda since we need openjpeg support
 conda:
   environment: rtd-environment.yml
 
@@ -10,7 +13,6 @@ sphinx:
   fail_on_warning: true
 
 python:
-   version: 3.8
    install:
       - method: pip
         extra_requirements:
