--- a/tox.ini
+++ b/tox.ini
@@ -124,7 +124,7 @@ conda_deps =
     openjpeg
     pandas
     parfive
-    pytest
+    pytest<6.0.0
     pytest-astropy
     pytest-cov
     pytest-mock
