--- a/tox.ini
+++ b/tox.ini
@@ -64,6 +64,7 @@ deps =
     # The 32bit build needs numpy installed before trying to install sunpy due
     # to https://github.com/scikit-image/scikit-image/issues/4261
     32bit: numpy
+    32bit: cryptography<3.0
 
     # Figure tests need a tightly controlled environment
     figure-!devdeps: astropy==4.0.1.post1
