Ignore distutils warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -128,6 +128,8 @@ filterwarnings =
     ignore:The private astropy._erfa module has been made into its own package
     # See https://github.com/astropy/astropy/pull/10570
     ignore:leap-second auto-update failed
+    # See https://github.com/astropy/extension-helpers/issues/23
+    ignore:Distutils was imported before Setuptools
 
 
 [pycodestyle]
