--- a/tox.ini
+++ b/tox.ini
@@ -127,7 +127,7 @@ conda_deps =
     openjpeg
     pandas
     parfive
-    pytest<6.0.0
+    pytest
     pytest-astropy
     pytest-cov
     pytest-mock
