--- a/tox.ini
+++ b/tox.ini
@@ -120,7 +120,7 @@ conda_deps =
     glymur
     hypothesis
     jinja2
-    libopenblas<0.3.10
+    libopenblas
     lxml
     matplotlib
     numpy
