Remove pinned version for OpenBLAS from conda-forge

--- a/tox.ini
+++ b/tox.ini
@@ -118,7 +118,7 @@ conda_deps =
     glymur
     hypothesis
     jinja2
-    libopenblas<0.3.10
+    libopenblas
     lxml
     matplotlib
     numpy
