Make RTD not the main check for sphinx warnings

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,6 +83,10 @@ jobs:
 
       - linux: py38-devdeps
 
+      - linux: build_docs
+        posargs: " "
+        coverage: false
+
 # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
 - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
   - template: publish.yml@OpenAstronomy
