--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -10,7 +10,7 @@ conda:
 sphinx:
   builder: html
   configuration: docs/conf.py
-  fail_on_warning: true
+  fail_on_warning: false
 
 python:
    install:
