--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,6 +48,7 @@ jobs:
     libraries:
       apt:
         - libopenjp2-7
+        - graphviz
       brew:
         - openjpeg
       yum:
@@ -73,6 +74,7 @@ jobs:
 
       - linux: codestyle
         name: python_codestyle
+        pytest: false
 
       - linux: py36-conda
         name: py36_conda
@@ -82,6 +84,10 @@ jobs:
         name: py36_test_oldestdeps
 
       - linux: py38-devdeps
+
+      - linux: build_docs
+        posargs: " "
+        pytest: false
 
 # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
 - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
