--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,4 @@
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
-variables:
-  CI_NAME: Azure Pipelines
-  CI_BUILD_ID: $(Build.BuildId)
-  CI_BUILD_URL: "https://dev.azure.com/sunpy/sunpy/_build/results?buildId=$(Build.BuildId)"
-  CIBW_BUILD: cp36-* cp37-* cp38-*
-  CIBW_SKIP: "*-win32 *-manylinux1_i686"
 
 schedules:
   - cron: "0 0 * * *"
@@ -12,8 +6,7 @@ schedules:
     branches:
       include:
       - master
-      - 1.0
-      - 1.1
+      - 2.0
     always: true
 
 resources:
@@ -90,23 +83,24 @@ jobs:
         pytest: false
 
 # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
-  - template: publish.yml@OpenAstronomy
-    parameters:
-      # Only Upload to PyPI on tags
-      ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
-        pypi_connection_name : 'PyPI'
-      test_extras: 'dev'
-      test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs sunpy'
-      submodules: false
-      targets:
-        - wheels_linux
-        - wheels_macos
-        - sdist
-      dependsOn:
-        - py37_test
-        - py38_test
-        - py38_test_online
-        - py38_test_32bit
-        - py37_test_oldestdeps
-        - py38_conda
+# - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
+- template: publish.yml@OpenAstronomy
+  parameters:
+    # Only Upload to PyPI on tags
+    ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+      pypi_connection_name : 'PyPI'
+    test_extras: 'dev'
+    test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs sunpy'
+    submodules: false
+
+    targets:
+      - wheels_cp3[78]-manylinux*
+      - wheels_cp3[78]-macosx*
+      - sdist
+    dependsOn:
+      - py37_test
+      - py38_test
+      - py38_test_online
+      - py38_test_32bit
+      - py37_test_oldestdeps
+      - py38_conda
