--- a/setup.cfg
+++ b/setup.cfg
@@ -128,6 +128,8 @@ filterwarnings =
     ignore:leap-second auto-update failed
     # See https://github.com/astropy/extension-helpers/issues/23
     ignore:Distutils was imported before Setuptools
+    # toolz internal deprecation warning https://github.com/pytoolz/toolz/issues/500
+    ignore:The toolz.compatibility module is no longer needed:DeprecationWarning
 
 
 [pycodestyle]
