--- a/tox.ini
+++ b/tox.ini
@@ -88,7 +88,7 @@ changedir = docs
 description = Invoke sphinx-build to build the HTML docs
 extras = dev
 commands =
-    sphinx-build --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
+    sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
     python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
 
 [testenv:codestyle]
