usedevelop = true docs

--- a/tox.ini
+++ b/tox.ini
@@ -86,6 +86,7 @@ commands =
     figure: {env:PYTEST_COMMAND} -m "figure" {posargs}
 
 [testenv:build_docs]
+usedevelop = true
 changedir = docs
 description = Invoke sphinx-build to build the HTML docs
 extras = dev
