--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,7 @@ deps =
     oldestdeps: numpy<1.17.0
     oldestdeps: matplotlib<3.0
     oldestdeps: scipy<1.3
+    oldestdeps: parfive<1.2
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
