--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,8 @@ deps =
     oldestdeps: astropy<4.0
     oldestdeps: numpy<1.15.0
     oldestdeps: matplotlib<3.0
+    oldestdeps: parfive<1.2
+    
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
