logging support in CI

--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ description =
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest -vvv -ra --pyargs sunpy --cov-report= --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
+    PYTEST_COMMAND = pytest -vvv -s -ra --pyargs sunpy --cov-report= --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
 passenv =
@@ -46,6 +46,9 @@ deps =
     setuptools
     # All our tests run in parallel which this plugin allows us to.
     pytest-xdist
+    # Since xdist uses stdout in order for it to work, we have to bypass this and use to
+    # capture any logging we might put in a test for debugging.
+    pytest-logger
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     devdeps: git+https://github.com/astropy/astropy
