--- a/tox.ini
+++ b/tox.ini
@@ -68,13 +68,13 @@ deps =
 
     # The 32bit build needs numpy installed before trying to install sunpy due
     # to https://github.com/scikit-image/scikit-image/issues/4261
-    32bit: numpy
+    build_docs,32bit: numpy
     32bit: cryptography<3.0
 
     # Figure tests need a tightly controlled environment
     figure-!devdeps: astropy==4.0.1.post1
     figure-!devdeps: matplotlib==3.3.2
-
+        
 # The following indicates which extras_require from setup.cfg will be installed
 # dev is special in that it installs everything
 extras =
