--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ resources:
     type: github
     endpoint: sunpy
     name: OpenAstronomy/azure-pipelines-templates
-    ref: master
+    ref: default_python
 
 trigger:
   branches:
@@ -34,6 +34,7 @@ trigger:
 jobs:
 - template: run-tox-env.yml@OpenAstronomy
   parameters:
+    default_python: '3.8'
     submodules: false
     coverage: codecov
     toxdeps: tox-pypi-filter
