Initial implementation of hash based tests with pytest-mpl

--- a/tox.ini
+++ b/tox.ini
@@ -72,6 +72,7 @@ deps =
     32bit: cryptography<3.0
 
     # Figure tests need a tightly controlled environment
+    figure: git+https://github.com/Cadair/pytest-mpl@hash_results_summary
     figure-!devdeps: astropy==4.0.1.post1
     figure-!devdeps: matplotlib==3.3.2
 
@@ -87,7 +88,7 @@ commands =
     figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
-    figure: {env:PYTEST_COMMAND} -m "figure" {posargs}
+    figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/sunpy-master/figures/{envname}/ {posargs}
 
 [testenv:build_docs]
 changedir = docs
