--- a/setup.cfg
+++ b/setup.cfg
@@ -83,6 +83,8 @@ doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 addopts = --doctest-rst -m "not figure" --doctest-ignore-import-errors
 asdf_schema_tests_enabled = true
 asdf_schema_root = sunpy/io/special/asdf/schemas/
+mpl-results-path = figure_test_images
+mpl-use-full-test-name = True
 markers =
     remote_data: marks this test function as needing remote data.
     online: marks this test function as needing online connectivity.
@@ -124,8 +126,7 @@ filterwarnings =
     ignore:leap-second auto-update failed
     # See https://github.com/astropy/extension-helpers/issues/23
     ignore:Distutils was imported before Setuptools
-    # toolz internal deprecation warning https://github.com/pytoolz/toolz/issues/500
-    ignore:The toolz.compatibility module is no longer needed:DeprecationWarning
+    ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.
 
 
 [pycodestyle]
