--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ tests =
   pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
   pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
   pytest-mock
+  pytest-mpl >= 0.12
   tox
 docs =
   sphinx>=2
