--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -98,11 +98,12 @@ jobs:
       submodules: false
 
       targets:
-        - wheels_cp3[78]-manylinux*x86_64
-        - wheels_cp3[78]-macosx*
+        - wheels_cp3[789]-manylinux*x86_64
+        - wheels_cp3[789]-macosx*
         - sdist
       dependsOn:
         - py37_test
+        - py38_test
         - py39_test
         - py38_test_online
         - py38_test_32bit
