adding requirement of h5netcdf

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
   astropy>=4.0
   parfive[ftp]>=1.1.0
   importlib_metadata;python_version<"3.8"
+  h5netcdf>=0.8.1
 
 [options.extras_require]
 database = sqlalchemy
