Allow config warnings through

--- a/setup.cfg
+++ b/setup.cfg
@@ -92,12 +92,15 @@ markers =
     figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
     flaky
     array_compare
+    mpl_image_compare
 remote_data_strict = True
 # Pin junit behaviour; we might want to update this to xunit2 at some point
 junit_family=xunit1
 filterwarnings =
     error
     error::sunpy.util.exceptions.SunpyDeprecationWarning
+    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
+    always::pytest.PytestConfigWarning
     #
     # A list of warnings to ignore follows. If you add to this list, you MUST
     # add a comment or ideally a link to an issue that explains why the warning
@@ -127,6 +130,7 @@ filterwarnings =
     ignore:leap-second auto-update failed
     # See https://github.com/astropy/extension-helpers/issues/23
     ignore:Distutils was imported before Setuptools
+    # Figure tests use agg backend so show doesn't work but we use it in peek
     ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.
 
 
