Hopefully fix packaging issues

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,7 @@ jobs:
         - openssl-devel
         - freetype-devel
         - libpng-devel
+        - hdf5-devel
 
     envs:
       - macos: py38
