--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ deps =
     32bit: cryptography<3.0
 
     # Figure tests need a tightly controlled environment
-    figure-!devdeps: astropy==4.0.1.post1
+    figure-!devdeps: astropy==4.0.3
     figure-!devdeps: matplotlib==3.3.2
 
 # The following indicates which extras_require from setup.cfg will be installed
